RQ2/REQBench-ReadPyE/ReadPyE/hifi-gan/numpy/1.20.3/installationresult.txt
Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple
Collecting matplotlib==0.86.2
  Using cached https://pypi.tuna.tsinghua.edu.cn/packages/f8/d0/46d6bf56ca3a466e79fe4884ec244c0a9cf035846dfb707c1bb90804a105/matplotlib-0.86.2.tar.gz (2.6 MB)
  Preparing metadata (setup.py): started
  Preparing metadata (setup.py): finished with status 'error'
  error: subprocess-exited-with-error
  
  × python setup.py egg_info did not run successfully.
  │ exit code: 1
  ╰─> [7 lines of output]
      Traceback (most recent call last):
        File "<string>", line 36, in <module>
        File "<pip-setuptools-caller>", line 34, in <module>
        File "/tmp/pip-install-n7yy_x2o/matplotlib_72410f299eb74d72930d70518b8a0646/setup.py", line 103
          print 'installing data to', datapath
                                   ^
      SyntaxError: Missing parentheses in call to 'print'. Did you mean print('installing data to', datapath)?
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: metadata-generation-failed

× Encountered error while generating package metadata.
╰─> See above for output.

note: This is an issue with the package mentioned above, not pip.
hint: See above for details.
